Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84383

[tvOS] Getting occasional crashes in QUIView responding to touch events

XMLWordPrintable

    • iOS/tvOS/watchOS

      Seems QUIView crashes when handling events due to UITouch objects used as keys in the QHash no longer being valid. Also tvOS seems to send touchesEnded calls with UITouch events which were not started

      Reproduced on 5.12, reported in 5.14 (by tQtC support)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            srutledg Shawn Rutledge
            mkrus Mike Krus
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:

                There are no open Gerrit changes